# genshin-scripts

./: README.md  coop.py  main.py  pyproject.toml
utils/: checker.py  common.py  constants.py  keyboard.py  locator.py  logger.py  mouse.py
