[tool.poetry]
name = "genshin-scripts"
version = "0.1.0"
description = ""
authors = ["FateWalker <21262207+opabravo@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "genshin_scripts"}]

[tool.poetry.dependencies]
python = "^3.11"
pywin32 = "^305"
pyautogui = "^0.9.53"
pillow = "^9.3.0"
opencv-python = "^4.6.0.66"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
